kubernetes/apps/default/ptero-ingress/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ptero-ingress
  namespace: default
spec:
  ports:
    - name: "http"
      protocol: TCP
      port: 80
      targetPort: 80
---
kind: Endpoints
apiVersion: v1
metadata:
  name: ptero-ingress
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.113
    ports:
      - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ptero-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: external
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
spec:
  tls:
    - hosts:
        - "ptero.${SECRET_DOMAIN}"
      secretName: ptero-ingress-web-tls
  rules:
    - host: "ptero.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ptero-ingress
                port:
                  name: http
